--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainMenu" />
         </activity>
-        <activity android:name=".MainMenu"></activity>
+        <activity android:name=".MainMenu"
+            android:launchMode="singleTop"></activity>
         <activity
             android:name=".Expediente"
             android:parentActivityName=".MainMenu">
